# stuselect

./: .travis.yml  README.md  README.md.template  class5.cpp  meson.build  top.bobby285271.stuselect.json
.github/workflows/: blank.yml  update.yml
data/: meson.build  top.bobby285271.stuselect.appdata.xml.in  top.bobby285271.stuselect.desktop.in  top.bobby285271.stuselect.gschema.xml
po/: POTFILES  meson.build
src/: main.vala  meson.build  students.vala  stuselect.gresource.xml  window.ui  window.vala
